[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/characters/enemies/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/characters/enemies/bosses/boss.gd" type="Script" id=2]
[ext_resource path="res://src/characters/enemies/bosses/states/init_spawn_animation.gd" type="Script" id=3]
[ext_resource path="res://src/characters/enemies/bosses/states/move_spawn_animation.gd" type="Script" id=4]
[ext_resource path="res://src/characters/enemies/bosses/states/end_spawn_animation.gd" type="Script" id=5]
[ext_resource path="res://src/characters/death/propulsion_particles.gd" type="Script" id=6]
[ext_resource path="res://src/characters/enemies/bosses/states/random_attack.gd" type="Script" id=7]
[ext_resource path="res://src/characters/death/character_death_big_explosion.tscn" type="PackedScene" id=8]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
spread = 50.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
angular_velocity = 1.08444e-19
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -5.0

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
spread = 50.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
angular_velocity = 1.08444e-19
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -5.0

[node name="Boss" instance=ExtResource( 1 )]
script = ExtResource( 2 )
death_instance = ExtResource( 8 )

[node name="StateMachine" parent="." index="1"]
initial_state = NodePath("../../Boss/StateMachine/Move/Follow/Megaship")

[node name="Move" parent="StateMachine" index="0"]
rotate_forwards = true

[node name="SpawnAnimation" type="Node" parent="StateMachine/Move/Follow" index="1"]
script = ExtResource( 4 )

[node name="RandomAttack" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 7 )

[node name="InitSpawnAnimation" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 3 )

[node name="EndSpawnAnimation" type="Node" parent="StateMachine" index="4"]
script = ExtResource( 5 )

[node name="PropulsionParticles" type="Node2D" parent="." index="2"]
script = ExtResource( 6 )

[node name="PropulsionParticles1" type="Particles2D" parent="PropulsionParticles" index="0"]
emitting = false
amount = 60
preprocess = 0.15
randomness = 0.3
local_coords = false
process_material = SubResource( 1 )

[node name="PropulsionParticles2" type="Particles2D" parent="PropulsionParticles" index="1"]
emitting = false
amount = 20
preprocess = 0.15
randomness = 0.3
local_coords = false
process_material = SubResource( 2 )
